--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       src="https://kit.fontawesome.com/16b26c5bcc.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="index.css" />
     <title>Metric/Imperial Converter</title>
-    <link rel="icon" type="image/x-icon" href="/Images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
   </head>
 
   <body class="container">
