--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <input
         class="form-input"
         type="number"
+        pattern="\d*"
         id="number-el"
         min="0"
         step=".1"
